[project]
name = "qes-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "load-dotenv>=0.1.0",
    "pydantic>=2.11.7",
    "qes-types",
    "qes-utils",
    "uvicorn>=0.35.0",
]


[tool.uv.workspace]
members = [
    "packages/*"
]

[tool.uv.sources]
qes-utils = { workspace = true }
qes-types = { workspace = true }
